--- a/wp_testing.ipynb
+++ b/wp_testing.ipynb
@@ -5433,6 +5433,97 @@
    "source": [
     "plot_predictions(predictions, breast_cancer_outputs_testing)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn import datasets, linear_model\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Load the diabetes dataset\n",
+    "diabetes_X, diabetes_y = datasets.load_diabetes(return_X_y=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.03807591,  0.05068012,  0.06169621, ..., -0.00259226,\n",
+       "         0.01990749, -0.01764613],\n",
+       "       [-0.00188202, -0.04464164, -0.05147406, ..., -0.03949338,\n",
+       "        -0.06833155, -0.09220405],\n",
+       "       [ 0.08529891,  0.05068012,  0.04445121, ..., -0.00259226,\n",
+       "         0.00286131, -0.02593034],\n",
+       "       ...,\n",
+       "       [ 0.04170844,  0.05068012, -0.01590626, ..., -0.01107952,\n",
+       "        -0.04688253,  0.01549073],\n",
+       "       [-0.04547248, -0.04464164,  0.03906215, ...,  0.02655962,\n",
+       "         0.04452873, -0.02593034],\n",
+       "       [-0.04547248, -0.04464164, -0.0730303 , ..., -0.03949338,\n",
+       "        -0.00422151,  0.00306441]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(diabetes_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use only one feature\n",
+    "#diabetes_X = diabetes_X[:, np.newaxis, 2]\n",
+    "\n",
+    "# Split the data into training/testing sets\n",
+    "diabetes_X_train = diabetes_X[:-20]\n",
+    "diabetes_X_test = diabetes_X[-20:]\n",
+    "\n",
+    "# Split the targets into training/testing sets\n",
+    "diabetes_y_train = diabetes_y[:-20]\n",
+    "diabetes_y_test = diabetes_y[-20:]\n",
+    "\n",
+    "# Create linear regression object\n",
+    "regr = linear_model.LinearRegression()\n",
+    "\n",
+    "# Train the model using the training sets\n",
+    "regr.fit(diabetes_X_train, diabetes_y_train)\n",
+    "\n",
+    "# Make predictions using the testing set\n",
+    "diabetes_y_pred = regr.predict(diabetes_X_test)\n",
+    "\n",
+    "# The coefficients\n",
+    "print(\"Coefficients: \\n\", regr.coef_)\n",
+    "# The mean squared error\n",
+    "print(\"Mean squared error: %.2f\" % mean_squared_error(diabetes_y_test, diabetes_y_pred))\n",
+    "# The coefficient of determination: 1 is perfect prediction\n",
+    "print(\"Coefficient of determination: %.2f\" % r2_score(diabetes_y_test, diabetes_y_pred))\n",
+    "\n",
+    "# Plot outputs\n",
+    "plt.scatter(diabetes_X_test, diabetes_y_test, color=\"black\")\n",
+    "plt.plot(diabetes_X_test, diabetes_y_pred, color=\"blue\", linewidth=3)\n",
+    "\n",
+    "plt.xticks(())\n",
+    "plt.yticks(())\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
