adds feature imporance paragraph

--- a/training.ipynb
+++ b/training.ipynb
@@ -1023,19 +1023,22 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Feature Importance\n",
     "\n",
-    "Something else that is very important to consider is feature importance. This can be considered for both regression and classification models, so we could **(and in future should!)** have done this for our previous example.\n",
+    "Feature Importance Analysis reveals how much each feature (columns/fields/dimensions) contributes to the model prediction.\n",
     "\n",
-    "This is an exploration into which features of the model (these are your column names or variables), have the greatest impact on the outcome of the model. \n",
+    "This can be used as a diagnostic tool:\n",
     "\n",
-    "There are many reason why this is an important step for testers:\n",
-    "- Certain columns may be dominating the predictions, for example, a model could be making predictions almost entirely based off the value of one column. In this case we can ask - do we need a machine learning model at all?\n",
-    "- By understanding which columns are the most important, you can narrow down your search for bugs or bad input data.\n",
-    " "
+    "It reveals which features are barely used or not used at all to make a decision.\n",
+    "It shows if the model is relying mostly or entirely on one or two features, this could suggest an error, or perhaps that a simpler model might be just as effective.\n",
+    "\n",
+    "More complex feature importance analysis can reveal the qualities of information that each feature gives.\n",
+    "\n",
+    "All of this can be used to diagnose issues within the training data, and help understand and explain the model."
    ]
   },
   {
