adds deep learning paragraph

--- a/training.ipynb
+++ b/training.ipynb
@@ -1084,30 +1084,29 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What on earth is deep learning and neural networks?\n",
+    "**Deep learning: **\n",
     "\n",
-    "- **Deep Learning** is a type of machine learning that uses neural networks as its model for solving problems.\n",
+    "So far we've discussed machine learning using structured data. This means data that is tabulated and has labelled feature names.\n",
     "\n",
-    "- **Neural Networks** are computational models inspired by the human brain's neural connections, composed of interconnected nodes (neurons) that process and transmit data to perform various tasks such as pattern recognition or decision-making.\n",
+    "Deep learning is a more complex form of machine learning which generally involves **unstructured data** like images and natural language.\n",
     "\n",
-    "Neural Networks are kind of **the big thing** at the moment.\n",
+    "Most deep learning involves **Neural Networks** - computational models inspired by the human brain's neural connections. They are made up of interconnected nodes formed into layers.\n",
     "\n",
-    "Chat GPT is made using a neural network, facial recognition uses neural networks, speech recognition, image generation, there are endless examples!\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So how do they work?\n",
+    "But the important thing to recognise is that a **Neural Network**, like any model, is just a complicated function, with an input, a hidden process, and an output.\n",
     "\n",
-    "- A neural network is a computational model inspired by the human brain's neural connections.\n",
-    "- It consists of interconnected nodes called neurons, organized into layers: input layer, hidden layers, and output layer.\n",
-    "- Each neuron receives input data and applies a weight to it, representing the strength of its connection to the next layer.\n",
-    "- Once trained, the neural network can be used to process new data and make predictions or decisions based on the learned patterns."
+    "And the way we test them is much the same as before.\n",
+    "\n",
+    " \n",
+    "\n",
+    "You can think of the nodes and connections within the neural network as small, simple mathematical functions.\n",
+    "\n",
+    "As the neural network is trained, the weights associated with these small component parts are adjusted using a **loss function.**\n",
+    "\n",
+    "If the training data is good enough, the neural network will gradually be able to tend towards the desired predictions."
    ]
   },
   {
