adds deep learning paragraph

--- a/training.ipynb
+++ b/training.ipynb
@@ -1092,9 +1092,9 @@
     "\n",
     "So far we've discussed machine learning using structured data. This means data that is tabulated and has labelled feature names.\n",
     "\n",
-    "Deep learning is a more complex form of machine learning which generally involves **unstructured data** like images and natural language.\n",
+    "**Deep learning** is a more complex form of machine learning which generally involves **unstructured data** like images and natural language.\n",
     "\n",
-    "Most deep learning involves **Neural Networks** - computational models inspired by the human brain's neural connections. They are made up of interconnected nodes formed into layers.\n",
+    "**Deep learning** involves **Neural Networks** - computational models inspired by the human brain's neural connections. They are made up of interconnected nodes formed into layers.\n",
     "\n",
     "But the important thing to recognise is that a **Neural Network**, like any model, is just a complicated function, with an input, a hidden process, and an output.\n",
     "\n",
