adds part markers

--- a/training.ipynb
+++ b/training.ipynb
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python Recap"
+    "## Part 1 Python Recap and Introduction to Predictive Models"
    ]
   },
   {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2874,7 +2874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2889,6 +2889,13 @@
     "produce_scatter_plot(breast_cancer_inputs,\n",
     "                     breast_cancer_outputs,\n",
     "                     []) # Try putting in three column names here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2 Machine Learning."
    ]
   },
   {
@@ -2911,7 +2918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2958,7 +2965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2991,7 +2998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3027,7 +3034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3141,7 +3148,7 @@
     "\n",
     "prediction = classification_model.predict(individual_1_data)\n",
     "print(prediction)\n",
-    "# A 0 is a benign prediction, and a 1 is a cancerous prediction"
+    "#  a '0' is a benign prediction, and a '1' is a malignant prediction"
    ]
   },
   {
@@ -3154,7 +3161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3172,7 +3179,7 @@
     "individual_1_diagnosis = breast_cancer_outputs_testing[(individual_1_data.index)[0]]\n",
     "\n",
     "print(\"Individual 1 has a diagnosis of:\",individual_1_diagnosis)\n",
-    "# A 0 is benign, a 1 is a cancerous."
+    "#  a '0' is a benign prediction, and a '1' is a malignant prediction"
    ]
   },
   {
@@ -3189,6 +3196,13 @@
    "metadata": {},
    "source": [
     "Did the model get it right? It might have? But how do we know whether it will be correct every time? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3 Testing"
    ]
   },
   {
@@ -3214,7 +3228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3231,7 +3245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3258,7 +3272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3555,7 +3569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interrogating Training Data"
+    "# Part 4: Assurance: Interrogating Training Data"
    ]
   },
   {
@@ -4588,6 +4602,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Part 5: Advanced Model Interrogation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Regression Models\n",
     "\n",
     "A Data Scientist has used the above dataset to train a regression model. They have sent you the following code that they used to create a model to predict the progression of diabetes. "
@@ -4722,7 +4743,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deep Learning and Neural Networks!"
+    "## Part 6 Deep Learning and Neural Networks!"
    ]
   },
   {
@@ -23741,7 +23762,8 @@
     "# Use our old produce_scatter_plot function to visualise the data.\n",
     "produce_scatter_plot(X,y,[0,1,2])\n",
     "\n",
-    "# Interesting, as a human, we can clearly see the different groups, and would be able to classify them easily without colours. \n"
+    "# Interesting, as a human, we can clearly see the different groups, and would be able to classify them easily without colours. \n",
+    "\n"
    ]
   },
   {
@@ -33102,12 +33124,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Extras "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Unsupervised vs Supervised Learning\n",
     "\n",
-    "**Supervised learning** is a machine learning approach where the algorithm learns from labeled training data. The training data consists of input features (also called independent variables) and their corresponding known output labels (also called dependent variables or target variables). The goal of supervised learning is to learn a mapping function that can predict the correct output label for new, unseen input data. In other words, the algorithm learns from examples where the desired outcome is already known.\n",
+    "**Supervised learning** is a machine learning approach where the algorithm learns from labelled training data. The training data consists of input features (also called independent variables) and their corresponding known output labels (also called dependent variables or target variables). The goal of supervised learning is to learn a mapping function that can predict the correct output label for new, unseen input data. In other words, the algorithm learns from examples where the desired outcome is already known.\n",
     "\n",
     "**Unsupervised Learning**\n",
-    "Unsupervised learning, on the other hand, is a machine learning approach where the algorithm learns from unlabeled data. Unlike supervised learning, there are no predefined output labels or target variables in unsupervised learning. The algorithm's objective is to find patterns, structures, or relationships within the data without any prior knowledge of the outcomes. Unsupervised learning algorithms attempt to uncover hidden patterns, group similar data points together, or reduce the dimensionality of the data without being guided by explicit labels.\n",
+    "Unsupervised learning, on the other hand, is a machine learning approach where the algorithm learns from unlabelled data. Unlike supervised learning, there are no predefined output labels or target variables in unsupervised learning. The algorithm's objective is to find patterns, structures, or relationships within the data without any prior knowledge of the outcomes. Unsupervised learning algorithms attempt to uncover hidden patterns, group similar data points together, or reduce the dimensionality of the data without being guided by explicit labels.\n",
     "\n",
     "So far we have only used supervised learning, which is far more common. For the example above, many clustering algorithms exist which can group clusters together without using labelled data. "
    ]
