--- a/training.ipynb
+++ b/training.ipynb
@@ -2957,10 +2957,12 @@
    "source": [
     "![image](.//task.png)\n",
     "\n",
-    "#### Can you tell which type of algorithm we want to use?\n",
-    "\n",
-    "Uncomment (remove the #) the correct type of model we want to use for our training in the code below.\n",
-    "Don't scroll down too far or you will see the answer!"
+    "# Here are some Questions to help you think about the topics so far, if you don't know the answers, ask someone or google them! \n",
+    "#### Can you tell which type of algorithm we want to use? Classification/ Regression/ Clustering\n",
+    "#### Can you name some examples of this type of algorithm?\n",
+    "#### Why not use all the data you have to train a model?\n",
+    "#### Name as many different terms as you know for the thing you're trying to predict.\n",
+    "\n"
    ]
   },
   {
@@ -2973,9 +2975,7 @@
     "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "classification_model = RandomForestClassifier()\n",
-    "# regression_model = RandomForestRegressor()\n",
-    "# cluster_model = KMeans()"
+    "classification_model = RandomForestClassifier()"
    ]
   },
   {
@@ -4316,8 +4316,10 @@
     "- Values close to 1 show high positive correlation.\n",
     "- Values close to -1 show high negative correlation.\n",
     "\n",
-    "\n",
-    "**Looking at this plot, which 2 columns show the highest correlation?**"
+    "# Questions\n",
+    "#### **Looking at this plot, which 2 columns show the highest correlation?**\n",
+    "#### What might you recommend if a feature is heavily correlated with the target variable?\n",
+    "#### What are some questions that you would always want to ask of training data? "
    ]
   },
   {
